# lsadapter

./: CMakeLists.txt
include/ls/: Adapter.h
src/ls/: Adapter.cpp
